RESOLVED FIXED27384
Random crashes in appcache/update-cache.html test
https://bugs.webkit.org/show_bug.cgi?id=27384
Summary Random crashes in appcache/update-cache.html test
Alexey Proskuryakov
Reported 2009-07-17 13:11:15 PDT
We're using a handle that may have been just deleted. Patch forthcoming.
Attachments
proposed fix (2.21 KB, patch)
2009-07-17 13:20 PDT, Alexey Proskuryakov
levin: review+
Alexey Proskuryakov
Comment 1 2009-07-17 13:20:05 PDT
Created attachment 32966 [details] proposed fix
Alexey Proskuryakov
Comment 2 2009-07-17 13:20:32 PDT
David Levin
Comment 3 2009-07-17 13:48:24 PDT
Comment on attachment 32966 [details] proposed fix I don't have in depth knowledge of the area, but the patch is pretty simple and makes a lot of sense.
Mark Rowe (bdash)
Comment 4 2009-07-17 17:02:54 PDT
This appears to have been landed. Is there a reason that the bug is still open?
Alexey Proskuryakov
Comment 5 2009-07-17 20:56:29 PDT
No reason. This was committed in <http://trac.webkit.org/changeset/46058>.
Note You need to log in before you can comment on or make changes to this bug.