        Reviewed by David Levin.

https://bugs.webkit.org/show_bug.cgi?id=27384
        Random crashes in appcache/update-cache.html test

        * loader/appcache/ApplicationCacheGroup.cpp:
        (WebCore::ApplicationCacheGroup::didReceiveResponse): Reorder code to avoid using a handle
        after canceling it.



Canonical link: https://commits.webkit.org/37680@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46058 268f45cc-cd09-0410-ab3c-d52691b4dbfc