WebCore/loader/appcache/ApplicationCacheGroup.cpp
@@ -468,9 +468,9 @@ void ApplicationCacheGroup::didReceiveResponse(ResourceHandle* handle, const Res
         ApplicationCacheResource* newestCachedResource = m_newestCache->resourceForURL(url);
         if (newestCachedResource) {
             m_cacheBeingUpdated->addResource(ApplicationCacheResource::create(url, newestCachedResource->response(), type, newestCachedResource->data()));
+            m_pendingEntries.remove(m_currentHandle->request().url());
             m_currentHandle->cancel();
             m_currentHandle = 0;
-            m_pendingEntries.remove(handle->request().url());
             // Load the next resource, if any.
             startLoadingEntry();
             return;
@@ -496,9 +496,9 @@ void ApplicationCacheGroup::didReceiveResponse(ResourceHandle* handle, const Res
             ApplicationCacheResource* newestCachedResource = m_newestCache->resourceForURL(handle->request().url());
             ASSERT(newestCachedResource);
             m_cacheBeingUpdated->addResource(ApplicationCacheResource::create(url, newestCachedResource->response(), type, newestCachedResource->data()));
+            m_pendingEntries.remove(m_currentHandle->request().url());
             m_currentHandle->cancel();
             m_currentHandle = 0;
-            m_pendingEntries.remove(handle->request().url());
             // Load the next resource, if any.
             startLoadingEntry();
         }
